--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- drawer.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/drawer/3.2.1/js/drawer.min.js"></script>
   <!-- original -->
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body class="drawer drawer--right drawer--navbarTopGutter">
