--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <meta title="ユアコーディング" description="XDデザインからのコーディング練習">
   <title>ユアコーディング</title>
   <!-- reset.css -->
-  <link rel="stylesheet" href="/css/reset.css">
+  <link rel="stylesheet" href="./css/reset.css">
   <!-- WOW.js -->
-  <link rel="stylesheet" href="/css/animate.css">
-  <script src="/js/wow.min.js"></script>
+  <link rel="stylesheet" href="./css/animate.css">
+  <script src="./js/wow.min.js"></script>
   <!-- swiper -->
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
@@ -29,7 +29,7 @@
   <header class="drawer-navbar drawer-navbar--fixed" role="banner">
     <div class="drawer-container inner">
       <div class="drawer-navbar-header">
-        <a class="header__logo" href="#"><img src="/image/logo.png" alt="ロゴ">
+        <a class="header__logo" href="#"><img src="./image/logo.png" alt="ロゴ">
           <h1>ユアコーディング</h1>
         </a>
         <!-- ハンバーガーボタン -->
@@ -61,7 +61,7 @@
           <a href="#contact" class="btn contact-btn hero__btn">お問い合わせ</a>
         </div>
         <div class="hero__image">
-          <img src="/image/manager.png" alt="ヒーロー画像">
+          <img src="./image/manager.png" alt="ヒーロー画像">
         </div>
       </div>
     </section>
@@ -154,21 +154,21 @@
         <p class="title-en">BLOG</p>
         <div class="blog__contents">
           <div class="blog__item">
-            <img src="/image/austin-distel-wawEfYdpkag-unsplash.png" alt="サイトリニューアル">
+            <img src="./image/austin-distel-wawEfYdpkag-unsplash.png" alt="サイトリニューアル">
             <div class="blog__item-text">
               <p class="blog__item-title">サイトをリニューアルオープンしました。</p>
               <p class="blog__item-date">2020.01.23</p>
             </div>
           </div>
           <div class="blog__item">
-            <img src="/image/dylan-gillis-KdeqA3aTnBY-unsplash.png" alt="SEO">
+            <img src="./image/dylan-gillis-KdeqA3aTnBY-unsplash.png" alt="SEO">
             <div class="blog__item-text">
               <p class="blog__item-title">WebサイトでSEO内部施策に適したコーディングでどれぐらいサイトが早くなるのか検証してみました</p>
               <p class="blog__item-date">2020.01.24</p>
             </div>
           </div>
           <div class="blog__item">
-            <img src="/image/brooke-cagle-g1Kr4Ozfoac-unsplash.png" alt="募集">
+            <img src="./image/brooke-cagle-g1Kr4Ozfoac-unsplash.png" alt="募集">
             <div class="blog__item-text">
               <p class="blog__item-title">ユアコーディングではデザイナーの方を 広く募集しています。</p>
               <p class="blog__item-date">2020.01.25</p>
@@ -190,7 +190,7 @@
             <div class="swiper-slide">
               <a class="works__card" href="">
                 <div class="works__image">
-                  <img src="/image/works01.png" alt="">
+                  <img src="./image/works01.png" alt="">
                 </div>
                 <div class="works__text">
                   <h3 class="works__text-title">コーディングカンファレンスのイベントLPの制作を行いました！</h3>
@@ -205,7 +205,7 @@
             <div class="swiper-slide">
               <a class="works__card" href="">
                 <div class="works__image">
-                  <img src="/image/works02.png" alt="">
+                  <img src="./image/works02.png" alt="">
                 </div>
                 <div class="works__text">
                   <h3 class="works__text-title">株式会社サンプル様採用サイトのコーディングを行いました！</h3>
@@ -220,7 +220,7 @@
             <div class="swiper-slide">
               <a class="works__card" href="">
                 <div class="works__image">
-                  <img src="/image/works03.png" alt="">
+                  <img src="./image/works03.png" alt="">
                 </div>
                 <div class="works__text">
                   <h3 class="works__text-title">株式会社サンプル様採用サイトのコーディングを行いました！</h3>
@@ -235,7 +235,7 @@
             <div class="swiper-slide">
               <a class="works__card" href="">
                 <div class="works__image">
-                  <img src="/image/works02.png" alt="">
+                  <img src="./image/works02.png" alt="">
                 </div>
                 <div class="works__text">
                   <h3 class="works__text-title">株式会社サンプル様採用サイトのコーディングを行いました！</h3>
@@ -295,5 +295,5 @@
 
   </main>
 
-  <script src="/js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
