--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
       <!-- ナビゲーションの中身 -->
       <nav class="drawer-nav" role="navigation">
         <ul class="drawer-menu">
-          <li><a class="drawer-menu-item" href="#">特徴</a></li>
-          <li><a class="drawer-menu-item" href="#">価格</a></li>
-          <li><a class="drawer-menu-item" href="#">お問い合わせ</a></li>
+          <li><a class="drawer-menu-item" href="#features">特徴</a></li>
+          <li><a class="drawer-menu-item" href="#price">価格</a></li>
+          <li><a class="drawer-menu-item" href="#contact">お問い合わせ</a></li>
         </ul>
       </nav>
       <div class="header__btn">
@@ -273,7 +273,7 @@
             <textarea name="entry.353000671" id="text" placeholder="" required></textarea><!-- /# -->
           </div>
           <div class="box">
-            <label for="privacyCheck"><input type="checkbox" id="privacyCheck" required>プライバシーポリシーに同意します</label>
+            <label for="privacyCheck" class="privacyCheck"><input type="checkbox" id="privacyCheck" required>プライバシーポリシーに同意します</label>
           </div>
           <div class="contact__button">
             <input type="submit" value="送信する" class="contact-btn" id="js-submit" disabled>
